# makelaarsland-gh-action

./: .pre-commit-config.yaml  README.md  crawl.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: action.yml  ge.yml  great_expectations.yml
data/: 16-09-21.json
data/output/: makelaarsland.csv  makelaarsland.json  makelaarsland_daily.csv  makelaarsland_last_month.csv
data/scraped/: 01-02-22.json  01-06-22.json  01-07-22.json  01-08-22.json  01-09-22.json  01-10-21.json  01-10-22.json  01-11-21.json  01-11-22.json  02-02-22.json  02-06-22.json  02-07-22.json  02-08-22.json  02-09-22.json  02-10-21.json  02-10-22.json  02-11-21.json  02-11-22.json  03-06-22.json  03-07-22.json  03-08-22.json  03-09-22.json  03-10-21.json  03-10-22.json  03-11-21.json  03-11-22.json  04-06-22.json  04-07-22.json  04-08-22.json  04-09-22.json  04-10-21.json  04-11-21.json  04-11-22.json  05-06-22.json  05-07-22.json  05-08-22.json  05-09-22.json  05-10-21.json  05-10-22.json  05-11-21.json  (+248 more)
dev/: parquet.py
great_expectations/: great_expectations.yml
great_expectations/checkpoints/: latest.yml  makelaarsland.yml  my_checkpoint.yml
great_expectations/expectations/: .ge_store_backend_id  latest.json  makelaarsland.json
lib/: utils.py
makelaarsland/: crawl.py  makelaarsland.py
output/: makelaarsland.csv  makelaarsland.json
src/lib/: aws.py  utils.py
src/makelaarsland/: crawl.py  crawl_v2.py  makelaarsland.py
src/makelaarsland/models/: house_listing.py
src/walter/: walterliving.py
walter/: walterliving.py
