[tool.poetry]
name = "makelaarsland-gh-action"
version = "0.1.0"
description = ""
authors = ["Lasse Benninga <devops.pipeline@example.com>"]
readme = "README.md"
packages = [{include = "makelaarsland_gh_action"}]

[tool.poetry.dependencies]
python = "^3.9"
beautifulsoup4= "^4.9.3"
dataclasses_json = "^0.5.4"
desert = "^2020.11.18"
fire = "^0.4.0"
great-expectations = "^0.15.8 "
marshmallow = "^3.12.2"
pandas = "^1.2.0"
pyarrow = "^8.0.0 "
requests = "^2.25.1"
retrying = "^1.3.3"
s3fs = "^2022.3.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
