[tool.poetry]
name = "makelaarsland-gh-action"
version = "0.1.0"
description = ""
authors = ["Lasse Benninga <devops.pipeline@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
beautifulsoup4 = "4.11.1"
fire = "0.5.0"
pandas = "1.5.3"
pyarrow = "10.0.1"
requests = "2.28.2"
s3fs = "2023.1.0"
pydantic = "1.10.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
